# cpp_1

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json
assets/shaders/: triangle.frag  triangle.vert
docs/: contexto.md  etapas.md  glad.md  glfw.md  logbook.md  personalidade.md  status.md  trilha.md
include/app/: app.h
include/editorUI/: debug_context.h  debug_ui.h  i_debug_panel.h
include/editorUI/panels/objects/: inspector_panel.h  objects_panel.h
include/gameObjects/: gameObject.h
include/gameObjects/player/: player.h
include/graphics/: ebo.h  vao.h  vbo.h
include/meshes/circle/: circle.h  circle_mesh.h
include/meshes/cube/: cube.h
include/objects/circle/: circle.h  circle_mesh.h  cube.h
include/objects/cube/: cube.h  cube_mesh.h
include/objects/square/: square.h  square_mesh.h
include/settings/: input.h  physics.h  types.h
lib/glad/include/glad/: glad.h
lib/glfw/include/GLFW/: glfw3.h
lib/glfw/lib/: glfw3.lib
lib/glm/glm/detail/: _features.hpp
lib/glm/glm/gtc/: type_ptr.hpp
lib/gui/: imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp
src/: glad.c  main.cpp
src/app/: app.cpp
src/editorUi/: debug_ui.cpp
src/editorUi/panels/inspector/: inspector_panel.cpp
src/editorUi/panels/objects/: object_panel.cpp
src/gameObjects/player/: player.cpp
src/graphics/: ebo.cpp  vao.cpp  vbo.cpp
src/meshes/circle/: circle.cpp  circle_mesh.cpp
src/meshes/cube/: cube.cpp  cube_mesh.cpp
src/meshes/square/: square_mesh.cpp
src/objects/: circle.cpp  circle_mesh.cpp  cube.cpp  cube_mesh.cpp
src/objects/circle/: circle.cpp  circle_mesh.cpp
src/objects/cube/: cube.cpp  cube_mesh.cpp
src/objects/square/: square.cpp  square_mesh.cpp
